# GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  beautify.sh
.github/workflows/: compilation-gengine.yml
Rtype/: CMakeLists.txt
Rtype/assets/animations/: r-typesheet42.json
Rtype/include/components/: Player.hpp
Rtype/include/systems/: PlayerMotion.hpp  PlayerShoot.hpp  Start.hpp
Rtype/source/: main.cpp
Rtype/source/systems/: DestroyOnCollision.cpp  MonstersAutoMotion.cpp  PlanesWave.cpp  PlayerAnimation.cpp  PlayerMotion.cpp  PlayerShoot.cpp  Start.cpp
cmake/: armv7-toolchain.cmake  automate-vcpkg.cmake  define-compilers.cmake
cmake/compilers/Apple/: armv8.cmake  x64.cmake
cmake/compilers/GNU/: armv7.cmake  x86.cmake
cmake/compilers/Windows/: armv7.cmake  armv8.cmake  x86.cmake
include/GEngine/: BaseEngine.hpp
include/GEngine/cvar/: cvar.hpp
include/GEngine/interface/components/: RemoteDriver.hpp
include/GEngine/interface/events/: RemoteDriver.hpp  RemoteEvent.hpp
include/GEngine/interface/network/: Networked.hpp
include/GEngine/interface/network/events/: ClientEvent.hpp
include/GEngine/interface/network/systems/: ClientEventPublisher.hpp  ClientEventPublisher.inl  ClientsHandler.hpp  NetworkComponent.hpp  ServerClient.hpp  ServerEvent.hpp  ServerEventReceiver.hpp  ServerEventReceiver.inl  Snapshot.hpp  Updater.hpp
include/GEngine/libdev/components/: HitBoxs.hpp  SpanLife.hpp  Transforms.hpp  Velocities.hpp
include/GEngine/libdev/components/driver/output/: Animation.hpp  Drawable.hpp  RaylibTypes.hpp  Shape.hpp  Sprite.hpp  Text.hpp
include/GEngine/libdev/deprecated/: Color.hpp  SystemTest.hpp
include/GEngine/libdev/systems/: AutoKiller.hpp  Collisions.hpp  Logger.hpp  MainLoop.hpp  Motions.hpp
include/GEngine/libdev/systems/driver/input/: KeyboardCatcher.hpp  MouseCatcher.hpp
include/GEngine/libdev/systems/driver/output/: Animate.hpp  Draw.hpp  FontManager.hpp  RenderWindow.hpp  SoundManager.hpp  TextureManager.hpp
include/GEngine/libdev/systems/events/: GameLoop.hpp  Log.hpp  MainLoop.hpp  Native.hpp  RenderLoop.hpp
include/GEngine/libdev/systems/events/driver/input/: Keyboard.hpp  Mouse.hpp  State.hpp
include/GEngine/libdev/systems/events/driver/output/: Draw.hpp  Sound.hpp
include/GEngine/libdev/systems/events/game/: Collision.hpp
include/GEngine/net/: cl_net_client.hpp  msg.hpp  net.hpp  net_address.hpp  net_channel.hpp  net_client.hpp  net_common.hpp  net_event.hpp  net_event_io.hpp  net_queue.hpp  net_server.hpp  net_socket.hpp  net_socket_error.hpp  socket.hpp
include/GEngine/net/events/: connection.hpp  socket_event.hpp
include/GEngine/net/structs/: msg_tcp_structs.hpp  msg_udp_structs.hpp
include/GEngine/net/utils/: queue.hpp
include/ecs/component/: Iterator.inl  Manager.hpp  Manager.inl  SparseArray.hpp
include/ecs/system/: Base.hpp  Base.inl  Manager.hpp
include/module/: raylib_safe.h
install/overlay-ports/gengine/: vcpkg.json
network_scripts/: clean.sh  run.sh  setup.sh  vars.sh
r-type/: CMakeLists.txt  a.out  bompile.sh  compilse.sh  dompile.sh
r-type/sources/: Start.cpp  Start.hpp  main.cpp
source/GEngine/interface/components/: RemoteDriver.cpp
source/GEngine/interface/network/systems/: ServerClientsHandler.cpp  Snapshot.cpp  Updater.cpp
source/GEngine/libdev/systems/: AutoKiller.cpp  Collisions.cpp  MainLoop.cpp  Motions.cpp
source/GEngine/libdev/systems/driver/input/: KeyboardCatcher.cpp
source/GEngine/libdev/systems/driver/output/: Animate.cpp  Draw.cpp  FontManager.cpp  RenderWindow.cpp  SoundManager.cpp  TextureManager.cpp
source/GEngine/net/: cl_net_client.cpp  net copy.cpp  net.cpp  net_address.cpp  net_channel.cpp  net_channel_pool.cpp  net_client.cpp  net_event.cpp  net_server.cpp  net_serveur.cpp  net_socket.cpp  socket.cpp
source/GEngine/net/event/: net_event_io.cpp
source/GEngine/net/events/: net_event.cpp  net_socket_event.cpp
source/GEngine/net/msg/: msg.cpp  msg_udp.cpp
source/ecs/: ECS.cpp
source/ecs/component/: Manager.cpp
